# SPLUNCR

./: .gitignore  Cargo.toml  README.md
crates/robot/: Cargo.toml  config.toml
crates/robot/src/: command.rs  control.rs  data.rs  hardware.rs  lib.rs  main.rs  mission.rs  platform.rs  robot.rs  subsystem.rs
crates/robot/src/control/: estimator.rs  regulator.rs
crates/robot/src/control/estimator/: attitude.rs  heave.rs  odometry.rs
crates/robot/src/control/regulator/: propulsion.rs
crates/robot/src/data/: command.rs  condition.rs  config.rs  state.rs  transport.rs
crates/robot/src/data/condition/: config.rs  state.rs
crates/robot/src/data/config/: body.rs  communication.rs  propulsion.rs  sensor.rs  vision.rs
crates/robot/src/data/state/: action.rs  autonomous.rs  perception.rs
crates/robot/src/data/transport/: communication.rs  telemetry.rs
crates/robot/src/hardware/: driver.rs  interface.rs  peripheral.rs  subsystem.rs
crates/robot/src/hardware/driver/: camera.rs  motor.rs  sensor.rs  socket.rs
crates/robot/src/hardware/drivers/: motor.rs
crates/robot/src/hardware/interface/: hal.rs  motor.rs  peripheral.rs  thruster.rs
crates/robot/src/hardware/subsystem/: communication.rs  propulsion.rs  vision.rs
crates/robot/src/mission/: context.rs  task.rs
crates/robot/src/mission/task/: communication.rs  propulsion.rs  sensor.rs  vision.rs
crates/robot/src/subsystem/: odometry.rs  propulsion.rs  sensor.rs  vision.rs
crates/robot/src/subsystem/propulsion/: allocator.rs  compensation.rs  thruster.rs
crates/robot/src/subsystem/sensor/: imu.rs
crates/robot/src/telemetry/: event.rs
crates/robot/src/telemetry/event/: subsystem.rs
crates/simulation/: Cargo.toml  config.toml
crates/simulation/src/: data.rs  hal.rs  hardware.rs  lib.rs  main.rs  simulation.rs  simulator.rs
crates/simulation/src/data/: condition.rs  config.rs  context.rs  state.rs
crates/simulation/src/data/config/: communication.rs  environment.rs  vehicle.rs
crates/simulation/src/data/state/: actuator.rs  body.rs
crates/simulation/src/hal/: motor.rs
crates/simulation/src/hardware/: motor.rs  sensor.rs
crates/simulation/src/hardware/sensor/: aquatic.rs  atmospheric.rs  imu.rs
crates/station/: Cargo.toml  config.toml
crates/station/src/: data.rs  gui.rs  lib.rs  main.rs  service.rs  station.rs  subsystem.rs
crates/station/src/data/: condition.rs  config.rs  state.rs  transport.rs  video.rs
crates/station/src/data/config/: communication.rs  controller.rs
crates/station/src/data/state/: communication.rs
crates/station/src/data/transport/: command.rs  communication.rs  telemetry.rs
crates/station/src/gui/: scene.rs  screens.rs
crates/station/src/service/: communication.rs  context.rs  controller.rs  video.rs
crates/station/src/subsystem/: communication.rs  controller.rs  gui.rs  video.rs
(+161 files in other folders)
