[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[features]
default = ["hardware"]
hardware = ["rppal"]
simulation = []

[dependencies]
shared = { path = "../shared", features = ["std"] }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
crossbeam = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1"
rppal = { version = "0.22.1", optional = true }
v4l = "0.14"
libc = "0.2"
