[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[features]
default = ["hardware"]
hardware = ["rpi"]
rpi = ["dep:rppal", "i2c", "camera", "network"]
i2c = ["dep:rppal"]
camera = ["dep:v4l"]
network = []
simulation = []

[dependencies]
framework = { path = "../framework", features = ["std"] }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
crossbeam = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1"
ctrlc = "3"
rppal = { version = "0.22.1", optional = true }
v4l = { version = "0.14", optional = true }
libc = "0.2"
