[package]
name = "station"
version = "0.1.0"
edition = "2024"

[dependencies]
robot = { path = "../robot" }
framework = { path = "../framework", features = ["std"] }
egui = "0.32"
kiss3d = { version = "0.37", features = ["egui"] }
nalgebra = "0.34.1"
gilrs = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1"
ffmpeg-next = "8"
